test/Fail/Issue2402-1.err
Issue2402-1.agda:11.1-10: error: [CoverageIssue]
Incomplete pattern matching for test. Missing cases:
  test false
when checking the definition of test
